--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta name="theme-color" content="#0f0f0f" />
-		<link rel="icon"  href="images/favicon.png" />
+		<link rel="icon"  href="images/photo.jpg" />
 		<link rel="apple-touch-icon" href="apple-touch-icon.png" />
 		<link rel="apple-touch-icon-precomposed" href="apple-touch-icon.png" />
 		<title>Ryan Grothouse</title>
@@ -58,6 +58,7 @@
 								</div>
 								<br/>
 								<div>
+									<img class="photo round" src="images/photo.jpg" alt="" height="100" width="100" />
 									<img src="images/logo.png" alt="" width="800" />
 								</div>
 								<br/>
