--- a/resume/index.html
+++ b/resume/index.html
@@ -1,4 +1,6 @@
 ---
 layout: page
 ---
-{% markdown resume.md %}
+
+{% capture markdown-include %}{% include resume.md %}{% endcapture %}
+{{ markdown-include | markdownify }}
